fix algo in frame

--- a/notes/12_gmm-em/2_em.tex
+++ b/notes/12_gmm-em/2_em.tex
@@ -179,6 +179,10 @@ To get the assignments we need the density of that group\ldots
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{\subsecname}
+
+\begin{figure}[!th]
+\footnotesize
+\removelatexerror
 \small
 \scalebox{.9}{   
 	\begin{algorithm}[H]
@@ -196,6 +200,7 @@ To get the assignments we need the density of that group\ldots
 		\caption{Outline of the EM alogrithm}
 	\end{algorithm}
 }
+\end{figure}
 
 \pause
 
@@ -222,3 +227,4 @@ AND\\
 \end{itemize}
 
 \end{frame}
+
